# convo

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  api.py  api_examples.py  demo_views.py  docker-compose.yml  manage_views.py  pyproject 2.toml  pyproject.toml  query_chat.py  query_example.py  query_web.py  requirements.txt  setup.py  sql_agent 2.py  sql_agent.py  start_api.py  tables.sql  test_agent.py  view_manager.py  views_config.json
cli/: query_chat.py
data/: views_config.json
docs/: project_structure.md
examples/: query_example.py
scripts/: manage_views.py  setup.py  start_api.py
src/convo/: __init__.py
src/convo/api/: __init__.py  main.py  models.py
src/convo/api/routes/: __init__.py  health.py  query.py  views.py
src/convo/config/: __init__.py  settings.py
src/convo/core/: __init__.py  sql_agent.py  view_manager.py
tests/: conftest.py
tests/integration/: test_setup_views.py
tests/test_api/: test_api.py
tests/test_core/: test_views.py
ui/: .eslintrc.json  .gitignore  README.md  babel.config.js  package-lock.json  package.json  tsconfig 2.json  tsconfig.json  webpack.config 2.js  webpack.config.js
ui/src/: index 2.tsx  index.tsx
ui/src/components/Dashboard/: DashboardCharts 2.tsx  DashboardCharts.tsx  MetricCard.tsx
ui/src/components/Layout/: AppLayout.tsx
ui/src/pages/: Dashboard.tsx  Health.tsx  Query 2.tsx  Query.tsx  Settings 2.tsx  Settings.tsx  Views 2.tsx  Views.tsx
ui/src/stores/: appStore 2.ts  appStore.ts
ui/src/styles/: theme.ts
ui/src/types/: index.ts
ui/src/utils/: api.ts  formatters.ts
